# Aeth-Hub

./: .gitignore  CLAUDE.md  COMMIT_LOG.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-data.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anilist.rs  cache.rs  cmds.rs  comments.rs  db.rs  discord.rs  dl.rs  imgproxy.rs  lib.rs  models.rs  omdb.rs  player.rs  steam.rs  streamer.rs
src-tauri/src/scrapers/: mod.rs  torrents.rs
src/components/: age-gate.tsx  arrow-scroll-row.tsx  cached-image.tsx  comment-section.tsx  comments.tsx  context-menu.tsx  download-bar.tsx  floating-dock.tsx  hero-banner.tsx  initials-fallback.tsx  media-row.tsx  player.tsx  sidebar.tsx  signup-modal.tsx  sort-controls.tsx  tag-filter.tsx  titlebar.tsx  toast.tsx  topbar.tsx  welcome.tsx
src/components/cards/: anime-card.tsx  filter-chips.tsx  game-card.tsx  hentai-card.tsx  movie-poster.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx
src/lib/: api.ts  img-cache.ts  mock-data.ts  sanitize.ts  store.tsx  theme-store.ts  types.ts  update-check.ts  use-catalog.ts  webtorrent.d.ts
src/pages/: anime.tsx  collection.tsx  detail.tsx  downloads.tsx  episode.tsx  games.tsx  hentai.tsx  history.tsx  home.tsx  kdramas.tsx  marketplace.tsx  movies.tsx  profile.tsx  search-overlay.tsx  settings.tsx  sources.tsx  tvshows.tsx  watchlist.tsx  watchtogether.tsx
